@@ -1,8 +1,9 @@
 plugins {
-  id("otel.java-conventions")
-  id("otel.publish-conventions")
+  id("otel.library-instrumentation")
 }
 
+// Name the Spring Boot modules in accordance with https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.developing-auto-configuration.custom-starter
+base.archivesName.set("opentelemetry-spring-boot")
 group = "io.opentelemetry.instrumentation"
 
 val versions: Map<String, String> by project
@@ -11,18 +12,15 @@ val springBootVersion = versions["org.springframework.boot"]
 dependencies {
   implementation("org.springframework.boot:spring-boot-autoconfigure:$springBootVersion")
   annotationProcessor("org.springframework.boot:spring-boot-autoconfigure-processor:$springBootVersion")
-  implementation("javax.validation:validation-api:2.0.1.Final")
+  implementation("javax.validation:validation-api")
 
   implementation(project(":instrumentation-annotations-support"))
   implementation(project(":instrumentation:kafka:kafka-clients:kafka-clients-2.6:library"))
   implementation(project(":instrumentation:spring:spring-kafka-2.7:library"))
   implementation(project(":instrumentation:spring:spring-web-3.1:library"))
-  implementation(project(":instrumentation:spring:spring-webmvc-3.1:library"))
+  implementation(project(":instrumentation:spring:spring-webmvc-5.3:library"))
   implementation(project(":instrumentation:spring:spring-webflux-5.0:library"))
-  implementation("io.opentelemetry:opentelemetry-micrometer1-shim") {
-    // just get the instrumentation, without micrometer itself
-    exclude("io.micrometer", "micrometer-core")
-  }
+  implementation(project(":instrumentation:micrometer:micrometer-1.5:library"))
 
   compileOnly("org.springframework.kafka:spring-kafka:2.9.0")
   compileOnly("org.springframework.boot:spring-boot-starter-actuator:$springBootVersion")
@@ -34,12 +32,15 @@ dependencies {
   compileOnly("io.opentelemetry:opentelemetry-extension-annotations")
   compileOnly("io.opentelemetry:opentelemetry-extension-trace-propagators")
   compileOnly("io.opentelemetry:opentelemetry-extension-aws")
-  compileOnly("io.opentelemetry:opentelemetry-sdk-extension-resources")
   compileOnly("io.opentelemetry:opentelemetry-exporter-logging")
   compileOnly("io.opentelemetry:opentelemetry-exporter-jaeger")
   compileOnly("io.opentelemetry:opentelemetry-exporter-otlp")
   compileOnly("io.opentelemetry:opentelemetry-exporter-zipkin")
   compileOnly(project(":instrumentation-annotations"))
+
+  compileOnly(project(":instrumentation:resources:library"))
+  annotationProcessor("com.google.auto.service:auto-service")
+  compileOnly("com.google.auto.service:auto-service-annotations")
 
   testImplementation("org.springframework.kafka:spring-kafka:2.9.0")
   testImplementation("org.springframework.boot:spring-boot-starter-actuator:$springBootVersion")
@@ -54,7 +55,7 @@ dependencies {
   testImplementation(project(":testing-common"))
   testImplementation("io.opentelemetry:opentelemetry-sdk")
   testImplementation("io.opentelemetry:opentelemetry-sdk-testing")
-  testImplementation("io.opentelemetry:opentelemetry-sdk-extension-resources")
+  testImplementation(project(":instrumentation:resources:library"))
   testImplementation("io.opentelemetry:opentelemetry-sdk-extension-autoconfigure-spi")
   testImplementation("io.opentelemetry:opentelemetry-extension-annotations")
   testImplementation("io.opentelemetry:opentelemetry-extension-trace-propagators")
@@ -68,4 +69,18 @@ dependencies {
 
 tasks.compileTestJava {
   options.compilerArgs.add("-parameters")
+}
+
+tasks.withType<Test>().configureEach {
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+
+  // disable tests on openj9 18 because they often crash JIT compiler
+  val testJavaVersion = gradle.startParameter.projectProperties["testJavaVersion"]?.let(JavaVersion::toVersion)
+  val testOnOpenJ9 = gradle.startParameter.projectProperties["testJavaVM"]?.run { this == "openj9" }
+    ?: false
+  if (testOnOpenJ9 && testJavaVersion?.majorVersion == "18") {
+    enabled = false
+  }
 }
