@@ -17,3 +17,12 @@ dependencies {
   library("org.springframework:spring-context:3.1.0.RELEASE")
   testLibrary("org.springframework:spring-context:3.2.3.RELEASE")
 }
+
+tasks.withType<Test>().configureEach {
+  // TODO run tests both with and without experimental span attributes
+  jvmArgs("-Dotel.instrumentation.spring-scheduling.experimental-span-attributes=true")
+
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+}
